--- a/source/main/resources/com/avereon/aveon/bundles/asset_es.properties
+++ b/source/main/resources/com/avereon/aveon/bundles/asset_es.properties
@@ -1,4 +1,4 @@
 codec-flow-name=Flujo
-aveon-description=Herramientas, solucionadores y visualización de CFD
-aveon-icon=aveon
-aveon-name=Aveon
+flow2d-description=Análisis bidimensional del flujo del superficie aerodinámico
+flow2d-icon=aveon
+flow2d-name=Flujo 2D
