--- a/source/main/resources/com/avereon/aveon/bundles/asset_es.properties
+++ b/source/main/resources/com/avereon/aveon/bundles/asset_es.properties
@@ -2,3 +2,6 @@ codec-flow-name=Flujo
 flow2d-description=Análisis bidimensional del flujo del superficie aerodinámico
 flow2d-icon=aveon
 flow2d-name=Flujo 2D de Superficie Aerodinámico
+
+airfoil2d-description=Superficie aerodinámico bidimensional
+airfoil2d-name=Superficie Aerodinámico
